Added support for fullscreen view

--- a/src/ui/html/notekeeper.html
+++ b/src/ui/html/notekeeper.html
@@ -71,6 +71,7 @@
                     <button class="btn glyphicon glyphicon-floppy-disk" type="button" id="is-notes-edited-button" disabled></button>
                     <button class="btn glyphicon glyphicon-pencil" type="button" id="is-editing-enabled-button" onclick="QuillEditor.instance.toggleState_isEditingEnabled()"></button>
                     <button class="btn glyphicon glyphicon-film" type="button" id="is-video-enabled-button" onclick="QuillEditor.instance.toggleState_isVideoEnabled()"></button>
+                    <button class="btn glyphicon glyphicon-fullscreen" type="button" id="is-fullscreen-mode-enabled-button" onclick="PageLayout.instance.toggleState_isFullscreenModeEnabled()"></button>
                 </form>
             </div>
         </div>
